fix alignment of new cust review form

--- a/src/components/productDetails/ProductDetails.scss
+++ b/src/components/productDetails/ProductDetails.scss
@@ -24,7 +24,7 @@
 			line-height: 2.5rem;
 
 			button {
-				background-color: white;
+				background-color: inherit;
 				font-size: 12px;
 				font-weight: 100;
 				border: none;
@@ -60,6 +60,11 @@
 			font-weight: 200;
 		}
 	}
+
+	&__new-review-form-wrapper {
+		grid-column: 1 / span 2;
+		width: 100%;
+	}
 	.green {
 		color: green;
 		font-size: 14px;
@@ -67,9 +72,5 @@
 	.red {
 		color: red;
 		font-size: 14px;
-	}
-
-	&__new-review-form-wrapper {
-		width: 100%;
 	}
 }
